--- a/morning-drills/package.json
+++ b/morning-drills/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "superagent": "^5.1.0",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "supertest": "^4.0.2"
+    "form-data": "^2.5.1"
   }
 }
