--- a/afternoon-hw/package.json
+++ b/afternoon-hw/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "chai": "^4.2.0",
+    "date-and-time": "^0.10.0",
+    "datejs": "^1.0.0-rc3",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
   },
